commit de att-1

--- a/index.html
+++ b/index.html
@@ -37,18 +37,14 @@
         </ul>
     </div>
 
-    <hr>
-
-    <div id="slides">
-        <h3>Página em Construção</h3>
-        <h1>slide de fotos</h1>
-        <h2>Em breve</h2>
+    <div id="photo-fundo">
+        <img class="photos" src="./imagens/assets/cachorro-quente.jpg" alt="">
+        <img class="photos" src="./imagens/assets/cachorro-quente2.jpg" alt="">
+        <img class="photos" src="./imagens/assets/cachorro-quente3.jpg" alt="">
     </div>
 
-    <hr>
-
     <div id="historia">
-        <h2>Nossa História</h2>
+        <h1>Nossa História</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vel ex sodales, tristique elit sit amet,
             fermentum lacus. Ut luctus mi a augue hendrerit accumsan. Sed quis ligula sit amet ipsum consequat gravida
             eu eu risus. Duis efficitur auctor tortor eu interdum. Duis sit amet porttitor turpis. Curabitur efficitur
@@ -63,19 +59,20 @@
             sodales nulla, non sollicitudin erat consectetur eget. Vestibulum vitae urna risus. Vestibulum varius sapien
             maximus sollicitudin laoreet. Duis ut lacus commodo, lacinia lectus eu, porttitor enim.</p>
     </div>
+    <h1>Nossos Dogs</h1>
     <div id="cachorro_quente">
         <div class="nomes">
             <img src="./imagens/mascara sem fundo.png" id="dali">
             <ul class="links">
-                <li><a href="#cusco">Cusco</a></li>
-                <li><a href="#pinscher">Pinscher</a></li>
-                <li><a href="#rottweiler">Rottweiler</a></li>
-                <li><a href="#pitbull_monster">Pitbull Monster</a></li>
-                <li><a href="#pitbull_k">Pitbul Kachurrasco</a></li>
-                <li><a href="#cadela_baia">Cadela Baia</a></li>
-                <li><a href="#linguicinha">Linguicinha</a></li>
-                <li><a href="#jaguatirica">Jaguatirica</a></li>
-                <li><a href="#vira_lata">Vira Lata</a></li>
+                <li><a class="font-dogs" href="#cusco">Cusco</a></li>
+                <li><a class="font-dogs" href="#pinscher">Pinscher</a></li>
+                <li><a class="font-dogs" href="#rottweiler">Rottweiler</a></li>
+                <li><a class="font-dogs" href="#pitbull_monster">Pitbull Monster</a></li>
+                <li><a class="font-dogs" href="#pitbull_k">Pitbul Kachurrasco</a></li>
+                <li><a class="font-dogs" href="#cadela_baia">Cadela Baia</a></li>
+                <li><a class="font-dogs" href="#linguicinha">Linguicinha</a></li>
+                <li><a class="font-dogs" href="#jaguatirica">Jaguatirica</a></li>
+                <li><a class="font-dogs" href="#vira_lata">Vira Lata</a></li>
             </ul>
         </div>
 
