--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
 
     <div class="linha_menu">
         <ul class="menu">
-            <a class="button" href="#dogs">
-                <li>Os Dogs</li>
-            </a>
-            <a class="button" href="#historia">
-                <li>A História</li>
-            </a>
-            <a class="button" href="#rodape">
-                <li>Contatos</li>
-            </a>
+            <li class="btn-hover"><a class="button button-menu" href="#dogs">
+                Os Dogs
+            </a></li>
+            <li class="btn-hover"><a class="button button-menu" href="#historia">
+                A História
+            </a></li>
+            <li class="btn-hover"><a class="button button-menu" href="#rodape">
+                Contatos
+            </a></li>
         </ul>
     </div>
 
@@ -63,16 +63,16 @@
     <div id="cachorro_quente">
         <div class="nomes">
             <img src="./imagens/mascara sem fundo.png" id="dali">
-            <ul class="links">
-                <li><a class="font-dogs" href="#cusco">Cusco</a></li>
-                <li><a class="font-dogs" href="#pinscher">Pinscher</a></li>
-                <li><a class="font-dogs" href="#rottweiler">Rottweiler</a></li>
-                <li><a class="font-dogs" href="#pitbull_monster">Pitbull Monster</a></li>
-                <li><a class="font-dogs" href="#pitbull_k">Pitbul Kachurrasco</a></li>
-                <li><a class="font-dogs" href="#cadela_baia">Cadela Baia</a></li>
-                <li><a class="font-dogs" href="#linguicinha">Linguicinha</a></li>
-                <li><a class="font-dogs" href="#jaguatirica">Jaguatirica</a></li>
-                <li><a class="font-dogs" href="#vira_lata">Vira Lata</a></li>
+            <ul class="lista-dogs">
+                <li class="btn-hover"><a class="button button-lista-dogs" href="#cusco">Cusco</a></li>
+                <li class="btn-hover"><a class="button button-lista-dogs" href="#pinscher">Pinscher</a></li>
+                <li class="btn-hover"><a class="button button-lista-dogs" href="#rottweiler">Rottweiler</a></li>
+                <li class="btn-hover"><a class="button button-lista-dogs" href="#pitbull_monster">Pitbull Monster</a></li>
+                <li class="btn-hover"><a class="button button-lista-dogs" href="#pitbull_k">Pitbul Kachurrasco</a></li>
+                <li class="btn-hover"><a class="button button-lista-dogs" href="#cadela_baia">Cadela Baia</a></li>
+                <li class="btn-hover"><a class="button button-lista-dogs" href="#linguicinha">Linguicinha</a></li>
+                <li class="btn-hover"><a class="button button-lista-dogs" href="#jaguatirica">Jaguatirica</a></li>
+                <li class="btn-hover"><a class="button button-lista-dogs" href="#vira_lata">Vira Lata</a></li>
             </ul>
         </div>
 
