--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li class="btn-hover"><a class="button button-menu" href="#dogs">
                     Os Dogs
                 </a></li>
-            <li class="btn-hover"><a class="button button-menu" href="#rodape">
+            <li class="btn-hover"><a class="button button-menu" href="#contatos">
                     Contatos
                 </a></li>
         </ul>
@@ -47,17 +47,19 @@
         <h1>Nossa História</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vel ex sodales, tristique elit sit amet,
             fermentum lacus. Ut luctus mi a augue hendrerit accumsan. Sed quis ligula sit amet ipsum consequat gravida
-            eu eu risus. Duis efficitur auctor tortor eu interdum. Duis sit amet porttitor turpis. Curabitur efficitur
-            ipsum metus, vel finibus eros vestibulum non. Sed vitae magna tempus, rutrum erat et, tempor neque. Nam eget
-            ligula quis mauris maximus placerat sit amet sed dui. Nunc et ex congue, venenatis justo scelerisque,
-            bibendum felis. Sed accumsan, justo ut luctus iaculis, felis mi volutpat leo, suscipit dignissim eros ligula
-            vitae nibh. Pellentesque varius sed ex id mattis. Mauris ante felis, tempor ac lacinia iaculis, consectetur
-            ac nisl.</p>
+            eu eu risus.<span id="dots"></span><span id="more"> Duis efficitur auctor tortor eu interdum. Duis sit amet
+                porttitor turpis. Curabitur efficitur
+                ipsum metus, vel finibus eros vestibulum non. Sed vitae magna tempus, rutrum erat et, tempor neque. Nam
+                eget
+                ligula quis mauris maximus placerat sit amet sed dui. Nunc et ex congue, venenatis justo scelerisque,
+                bibendum felis. Sed accumsan, justo ut luctus iaculis, felis mi volutpat leo, suscipit dignissim eros
+                ligula
+                vitae nibh. Pellentesque varius sed ex id mattis. Mauris ante felis, tempor ac lacinia iaculis,
+                consectetur
+                ac nisl.</p>
+        </spam>
 
-        <p>Morbi pellentesque pellentesque turpis, sit amet egestas ex. Ut porta lectus at nibh pretium commodo. Aenean
-            at ultricies magna, at pretium nisi. Donec mattis hendrerit risus eget vestibulum. Suspendisse sagittis
-            sodales nulla, non sollicitudin erat consectetur eget. Vestibulum vitae urna risus. Vestibulum varius sapien
-            maximus sollicitudin laoreet. Duis ut lacus commodo, lacinia lectus eu, porttitor enim.</p>
+        <button class="button-add" onclick="myFunction()" id="myBtn">Read More</button>
     </div>
     <h1 id="dogs">Nossos Dogs</h1>
     <div id="cachorro_quente" class="slide">
@@ -86,6 +88,9 @@
                             de batata, molho especial, barbecue, tomate defumado com orégano, ovo cozido, batata palha,
                             salsa
                             verde e queijo ralado.</p>
+                    </div>
+                    <div>
+                        <button class="button-add">Adicionar</button>
                     </div>
                 </div>
             </div>
@@ -194,26 +199,62 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 
-    <footer>
-        <img src="./imagens/assets/logo.png" id="logo">
-        <ul id="rodape">
-            <a href="https://wa.me/message/FVRAEZSRMDXSH1" target="_blank">
-                <li class="ZAP" id="ZAP"></li>
-            </a>
-            <a href="https://instagram.com/lacasa.dodog?igshid=YmMyMTA2M2Y=" target="_blank">
-                <li id="IG"></li>
-            </a>
-        </ul>
+    <div class="cachorro-quente-cartao">
+        <div class="cartao ">
+            <div class="card-front">
+                <img class="img-card" src="./imagens/assets/cusco.png" alt="Imagen">
+                <button class="bts btn-card">Dog Cusco</button>
+            </div>
+            <div class="card-back">
+                <h3>Dog Cusco</h3>
+                <p>O Dog Cusco é aquele teu cachorro tradicional com 2 salsichas, pão d'água, pure
+                    de batata, molho especial, barbecue, tomate defumado com orégano, ovo cozido, batata palha,
+                    salsa
+                    verde e queijo ralado.</p>
+                <div>
+                    <button class="btn-card">Volta</button>
+                    <button class="btn-card">Adicionar</button>
+                </div>
+            </div>
+        </div>
+        <div class="cartao ">
+            <div class="card-front">
+                <img class="img-card" src="./imagens/assets/pinscher.png" alt="Imagen">
+                <button class="bts btn-card">Pinscher</button>
+            </div>
+            <div class="card-back">
+                <h2>Pinscher</h2>
+                <p class="ingredientes">E pra quem não curte comer carne, temos essa deliciosa opção com pão
+                    d'água,
+                    molho especial, tomate defumado com orégano, cenouricha,milho verde, ervilha, cebola ao
+                    alho.</p>
+                <div>
+                    <button class="btn-card">Volta</button>
+                    <button class="btn-card">Adicionar</button>
+                </div>
+            </div>
+        </div>
 
-        <a href="https://www.google.com/maps/place/R.+Amauri+Soares+Ribeiro,+559+-+C%C3%B4nego+Luiz+Walter+Hanquet,+Camaqu%C3%A3+-+RS,+96770-000/@-30.8435933,-51.7874787,19z/data=!3m1!4b1!4m5!3m4!1s0x951a769500d2775b:0x3d3b3091f88f008!8m2!3d-30.8435933!4d-51.7864219"
-            target="_blank">
-            <p>Amauri Soares Ribeiro nº:1580, Cônego Walter - Camaquã/RS</p>
-        </a>
+    </div>
+
+    <h1>Endereço e Contatos</h1>
+    <footer>
+        <div class="mapa">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d856.3846409462894!2d-51.787066971501204!3d-30.843593298401576!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x951a769500d2775b%3A0x3d3b3091f88f008!2sR.%20Amauri%20Soares%20Ribeiro%2C%20559%20-%20C%C3%B4nego%20Luiz%20Walter%20Hanquet%2C%20Camaqu%C3%A3%20-%20RS%2C%2096770-000!5e0!3m2!1spt-BR!2sbr!4v1684173520006!5m2!1spt-BR!2sbr"
+                style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="contatos">
+            <img src="./imagens/contact/instagram-50-white.png" alt="instagram">
+            <img src="./imagens/contact/whatsapp-50-white.png" alt="whatsapp">
+        </div>
     </footer>
+    <span id="contatos">La Casa Do Dog @ 2023 | Todos os direitos reservados</span>
+
     <script src="script.js"></script>
 </body>
 
