--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                 <div class="content">
                     <img src="./imagens/assets/cusco.png" alt="cusco" width="450vw">
                     <div>
-                        <h2>Cusco</h2>
-                        <p>O Dog Cusco é aquele teu cachorro tradicional com 2 salsichas, pão d'água, pure
+                        <h2>Dog Cusco</h2>
+                        <p class="ingredientes">O Dog Cusco é aquele teu cachorro tradicional com 2 salsichas, pão d'água, pure
                             de batata, molho especial, barbecue, tomate defumado com orégano, ovo cozido, batata palha,
                             salsa
                             verde e queijo ralado.</p>
@@ -191,53 +191,15 @@
                     <img src="./imagens/assets/vira_lata.png" alt="vira-lata" width="400vw">
                     <div>
                         <h2>Vira Lata</h2>
-                        <p class="ingredientes">E no nosso Vira Lata tem aquele espetinho de churrasco, duas calabresas,
+                        <span id="text-vira-lata" class="ingredientes">E no nosso Vira Lata tem aquele espetinho de churrasco, duas calabresas,
                             bacon em
                             tiras, pão d'água,
                             pure de batata, molho especial, barbecue, tomate defumado com orégano,
-                            ovo cozido, batata palha, salsa verde e queijo mussarela escamado.</p>
+                            ovo cozido, batata palha, salsa verde e queijo mussarela escamado.</span>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-
-    <div class="cachorro-quente-cartao">
-        <div class="cartao ">
-            <div class="card-front">
-                <img class="img-card" src="./imagens/assets/cusco.png" alt="Imagen">
-                <button class="bts btn-card">Dog Cusco</button>
-            </div>
-            <div class="card-back">
-                <h3>Dog Cusco</h3>
-                <p>O Dog Cusco é aquele teu cachorro tradicional com 2 salsichas, pão d'água, pure
-                    de batata, molho especial, barbecue, tomate defumado com orégano, ovo cozido, batata palha,
-                    salsa
-                    verde e queijo ralado.</p>
-                <div>
-                    <button class="btn-card">Volta</button>
-                    <button class="btn-card">Adicionar</button>
-                </div>
-            </div>
-        </div>
-        <div class="cartao ">
-            <div class="card-front">
-                <img class="img-card" src="./imagens/assets/pinscher.png" alt="Imagen">
-                <button class="bts btn-card">Pinscher</button>
-            </div>
-            <div class="card-back">
-                <h2>Pinscher</h2>
-                <p class="ingredientes">E pra quem não curte comer carne, temos essa deliciosa opção com pão
-                    d'água,
-                    molho especial, tomate defumado com orégano, cenouricha,milho verde, ervilha, cebola ao
-                    alho.</p>
-                <div>
-                    <button class="btn-card">Volta</button>
-                    <button class="btn-card">Adicionar</button>
-                </div>
-            </div>
-        </div>
-
     </div>
 
     <h1>Endereço e Contatos</h1>
