--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
                             molho especial, tomate defumado com orégano, cenouricha,milho verde, ervilha, cebola ao
                             alho.</p>
                     </div>
+                    <div>
+                        <button class="button-add">Adicionar</button>
+                    </div>
                 </div>
             </div>
             <div class="column rottweiler">
@@ -116,6 +119,9 @@
                             pão d'água, pure de batata, molho especial, barbecue, tomate defumado com orégano, ovo
                             cozido, batata
                             palha, salsa verde e queijo mussarela escamado.</p>
+                    </div>
+                    <div>
+                        <button class="button-add">Adicionar</button>
                     </div>
                 </div>
             </div>
@@ -131,6 +137,9 @@
                             molho especial, barbecue, tomate defumado com orégano,
                             ovo cozido, batata palha, salsa verde e queijo mussarela escamado.</p>
                     </div>
+                    <div>
+                        <button class="button-add">Adicionar</button>
+                    </div>
                 </div>
             </div>
             <div class="column pitbull-K">
@@ -144,6 +153,9 @@
                             barbecue, tomate defumado com orégano,
                             ovo cozido, batata palha, salsa verde e queijo mussarela escamado.</p>
                     </div>
+                    <div>
+                        <button class="button-add">Adicionar</button>
+                    </div>
                 </div>
             </div>
             <div class="column cadela-baia">
@@ -156,6 +168,9 @@
                             aquele espetinho de carne moida, pão d'água, pure de batata, molho especial,
                             barbecue, tomate defumado com orégano,
                             ovo cozido, batata palha, salsa verde e queijo ralado.</p>
+                    </div>
+                    <div>
+                        <button class="button-add">Adicionar</button>
                     </div>
                 </div>
             </div>
@@ -171,6 +186,9 @@
                             barbecue, tomate defumado com orégano,
                             ovo cozido, batata palha, salsa verde e queijo ralado.</p>
                     </div>
+                    <div>
+                        <button class="button-add">Adicionar</button>
+                    </div>
                 </div>
             </div>
             <div class="column jaguatirica">
@@ -184,6 +202,9 @@
                             barbecue, tomate defumado com orégano,
                             ovo cozido, batata palha, salsa verde e queijo ralado.</p>
                     </div>
+                    <div>
+                        <button class="button-add">Adicionar</button>
+                    </div>
                 </div>
             </div>
             <div class="column vira-lata">
@@ -196,6 +217,9 @@
                             tiras, pão d'água,
                             pure de batata, molho especial, barbecue, tomate defumado com orégano,
                             ovo cozido, batata palha, salsa verde e queijo mussarela escamado.</span>
+                    </div>
+                    <div>
+                        <button class="button-add">Adicionar</button>
                     </div>
                 </div>
             </div>
