Att-Zoom-In-Out

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
 
     <div id="historia">
-        <h1>Nossa História</h1>
+        <h1 class="titulos">Nossa História</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vel ex sodales, tristique elit sit amet,
             fermentum lacus. Ut luctus mi a augue hendrerit accumsan. Sed quis ligula sit amet ipsum consequat gravida
             eu eu risus.<span id="dots"></span><span id="more"> Duis efficitur auctor tortor eu interdum. Duis sit amet
@@ -61,7 +61,7 @@
 
         <button class="button-add" onclick="myFunction()" id="myBtn">Read More</button>
     </div>
-    <h1 id="dogs">Nossos Dogs</h1>
+    <h1 id="dogs" class="titulos">Nossos Dogs</h1>
     <div id="cachorro_quente" class="slide">
         <div id="myBtnContainer" class="lista-dogs">
             <img src="./imagens/mascara sem fundo.png" alt="meio/rosto-Dali">
@@ -226,7 +226,7 @@
         </div>
     </div>
 
-    <h1>Endereço e Contatos</h1>
+    <h1 class="titulos">Endereço e Contatos</h1>
     <footer>
         <div class="mapa">
             <iframe
