--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
     <span id="contatos">La Casa Do Dog @ 2023 | Todos os direitos reservados</span>
 
     <script src="script.js"></script>
+    <script src="./script/script.js"></script>
 </body>
 
 </html>
