--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -25,15 +25,9 @@
 
     <div class="linha_menu">
         <ul class="menu">
-            <li class="btn-hover"><a class="button button-menu" href="#historia">
-                    A História
-                </a></li>
-            <li class="btn-hover"><a class="button button-menu" href="#dogs">
-                    Os Dogs
-                </a></li>
-            <li class="btn-hover"><a class="button button-menu" href="#contatos">
-                    Contatos
-                </a></li>
+            <li><button class="bts btn-hover"><a href="#historia">A História</a></button>                </li>
+            <li><button class="bts btn-hover"><a href="#dogs">Dogs</a></button></li>
+            <li><button class="bts btn-hover"><a href="#contatos">Contatos</a></button></li>
         </ul>
     </div>
 
