commit-att-bts-2

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="linha_menu">
         <ul class="menu">
-            <li><button class="bts btn-hover"><a href="#historia">A História</a></button>                </li>
+            <li><button class="bts btn-hover"><a href="#historia">História</a></button>                </li>
             <li><button class="bts btn-hover"><a href="#dogs">Dogs</a></button></li>
             <li><button class="bts btn-hover"><a href="#contatos">Contatos</a></button></li>
         </ul>
