--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <button class="button-add" onclick="myFunction()" id="myBtn">Read More</button>
     </div>
     <h1 id="dogs" class="titulos">Nossos Dogs</h1>
-    <div id="cachorro_quente" class="slide">
+    <div id="cachorro_quente" class="slides">
         <div id="myBtnContainer" class="lista-dogs">
             <img src="./imagens/mascara sem fundo.png" alt="meio/rosto-Dali">
             <ul class="lista-btn">
@@ -220,6 +220,180 @@
         </div>
     </div>
 
+    <div class="responsivo">
+        <ul class="custom-controls">
+            <li><img src="/imagens/assets/cusco.png" alt=""></li>
+            <li><img src="/imagens/assets/pinscher.png" alt=""></li>
+            <li><img src="/imagens/assets/rottweiler.png" alt=""></li>
+            <li><img src="/imagens/assets/pitbull_monster.png" alt="" width="80%"></li>
+            <li><img src="/imagens/assets/pitbull_monster.png" alt="" width="80%"></li>
+            <li><img src="/imagens/assets/cadela_baia.png" alt=""></li>
+            <li><img src="./imagens/assets/linguicinha.png" alt=""></li>
+            <li><img src="/imagens/assets/jaguatirica.png" alt=""></li>
+            <li><img src="/imagens/assets/vira_lata.png" alt=""></li>
+        </ul>
+        <div class="slide-wrapper">
+            <ul class="slide">
+                <li>
+                    <div class="cartao ">
+                        <div class="card-front">
+                            <img class="img-card" src="./imagens/assets/cachorro-quente.jpg" alt="Imagen">
+                        </div>
+                        <div class="card-back">
+                            <h2>Dog Cusco</h2>
+                            <p class="ingredientes">O Dog Cusco é aquele teu cachorro tradicional com 2 salsichas, pão d'água, pure
+                                de batata, molho especial, barbecue, tomate defumado com orégano, ovo cozido, batata palha,
+                                salsa
+                                verde e queijo ralado.</p>
+                            <div>
+                                <button class="btn-card">Volta</button>
+                                <button class="btn-card">Adicionar</button>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="cartao ">
+                        <div class="card-front">
+                            <img class="img-card" src="./imagens/assets/cachorro-quente1.jpg" alt="Imagen">
+                        </div>
+                        <div class="card-back">
+                            <h2>Pinscher</h2>
+                            <p class="ingredientes">E pra quem não curte comer carne, temos essa deliciosa opção com pão
+                                d'água, molho especial, tomate defumado com orégano, cenouricha,milho verde, ervilha, cebola ao alho.</p>
+                            <div>
+                                <button class="btn-card">Volta</button>
+                                <button class="btn-card">Adicionar</button>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="cartao ">
+                        <div class="card-front">
+                            <img class="img-card" src="./imagens/assets/cachorro-quente2.jpg" alt="Imagen">
+                        </div>
+                        <div class="card-back">
+                            <h2>Rottweiler</h2>
+                            <p class="ingredientes">O Rottweiler é aquele dogão esperto com dois espetinhos de carne assado
+                                na lenha, pão d'água, pure de batata, molho especial, barbecue, tomate defumado com orégano, ovo
+                                cozido, batata palha, salsa verde e queijo mussarela escamado.</p>
+                            <div>
+                                <button class="btn-card">Volta</button>
+                                <button class="btn-card">Adicionar</button>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="cartao ">
+                        <div class="card-front">
+                            <img class="img-card" src="./imagens/assets/cachorro-quente-foto-9.jpg" alt="Imagen">
+                        </div>
+                        <div class="card-back">
+                            <h2>Pitbull Monster</h2>
+                            <p class="ingredientes">Só de pensar já da água na boca, o dog Pitbull é feito com aquela
+                                costela top desfiada na panela, pão d'água, pure de batata,
+                                molho especial, barbecue, tomate defumado com orégano,
+                                ovo cozido, batata palha, salsa verde e queijo mussarela escamado.</p>
+                            <div>
+                                <button class="btn-card">Volta</button>
+                                <button class="btn-card">Adicionar</button>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="cartao ">
+                        <div class="card-front">
+                            <img class="img-card" src="./imagens/assets/cachorro-quente-foto-5.jpeg" alt="Imagen">
+                        </div>
+                        <div class="card-back">
+                            <h2>Pitbull Kachurrasco</h2>
+                            <p class="ingredientes">Nesse Dog vem um espetinho de carne assado na lenha, pão d'água, pure de
+                                batata, molho especial, barbecue, tomate defumado com orégano,
+                                ovo cozido, batata palha, salsa verde e queijo mussarela escamado.</p>
+                            <div>
+                                <button class="btn-card">Volta</button>
+                                <button class="btn-card">Adicionar</button>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="cartao ">
+                        <div class="card-front">
+                            <img class="img-card" src="./imagens/assets/cachorro-quente3.jpg" alt="Imagen">
+                        </div>
+                        <div class="card-back">
+                            <h2>Cadela Baia</h2>
+                            <p class="ingredientes">"Putututu, temo domando, temo aprendendo, temo ensinando" O dog Cadela
+                                Baia tem aquele espetinho de carne moida, pão d'água, pure de batata, molho especial,
+                                barbecue, tomate defumado com orégano, ovo cozido, batata palha, salsa verde e queijo ralado.</p>
+                            <div>
+                                <button class="btn-card">Volta</button>
+                                <button class="btn-card">Adicionar</button>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="cartao">
+                        <div class="card-front">
+                            <img class="img-card" src="./imagens/assets/cachorro-quente-foto-6.jpeg" alt="Imagen">
+                        </div>
+                        <div class="card-back">
+                            <h2>Linguicinha</h2>
+                            <p class="ingredientes">Feito no estilo diferenciado do La Casa do Dog, o Linguicinha tem duas
+                                calabresas, pão d'água, pure de batata, molho especial, barbecue, tomate defumado com orégano,
+                                ovo cozido, batata palha, salsa verde e queijo ralado.</p>
+                            <div>
+                                <button class="btn-card">Volta</button>
+                                <button class="btn-card">Adicionar</button>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="cartao">
+                        <div class="card-front">
+                            <img class="img-card" src="./imagens/assets/cachorro-quente-foto-7.jpeg" alt="Imagen">
+                        </div>
+                        <div class="card-back">
+                            <h2>Jaguatirica</h2>
+                            <p class="ingredientes">No Jaguatirica tem aquele espetinho de coração que também é feito no
+                                fogo de lenha, pão d'água, pure de batata, molho especial, barbecue, tomate defumado com orégano,
+                                ovo cozido, batata palha, salsa verde e queijo ralado.</p>
+                            <div>
+                                <button class="btn-card">Volta</button>
+                                <button class="btn-card">Adicionar</button>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="cartao">
+                        <div class="card-front">
+                            <img class="img-card" src="./imagens/assets/cachorro-quente-foto-8.jpeg" alt="Imagen">
+                        </div>
+                        <div class="card-back">
+                            <h2>Vira Lata</h2>
+                            <div>
+                                <button class="btn-card">Volta</button>
+                                <button class="btn-card">Adicionar</button>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    
+        <div class="arrow-nav">
+            <button class="prev"></button>
+            <button class="next"></button>
+        </div>    
+    </div>
+
     <h1 class="titulos">Endereço e Contatos</h1>
     <footer>
         <div class="mapa">
@@ -235,8 +409,9 @@
     </footer>
     <span id="contatos">La Casa Do Dog @ 2023 | Todos os direitos reservados</span>
 
-    <script src="script.js"></script>
-    <script src="./script/script.js"></script>
+    <script type="module" src="./script/script2.js"></script>
+    <script src="/script/script.js"></script>
+    
 </body>
 
 </html>
